# gleam-crawler

./: .gitignore  Cargo.toml  config.toml  giveaways.csv  giveaways.json  new_giveaways.json
src/: config.rs  crawler.rs  crawler_lib.rs  error.rs  gleam.rs  google.rs  main.rs  meilisearch.rs
