[package]
name = "gleam_finder_client"
version = "0.2.3"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
publish = false
license = "AGPL-3.0-only"

[dependencies]
gleam_finder = { version="0.4.2", features = ["serde-support"]}
clap = "2.33.0"
progress_bar = "0.1.3"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
minreq = "2.1.0"