[package]
name = "gleam_finder_client"
version = "0.3.2"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
publish = false
license = "AGPL-3.0-only"

[dependencies]
gleam_finder = { version="0.5", features = ["serde-support"]}
clap = "2.33.0"
progress_bar = "0.1.3"
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
minreq = "2.2.0"
meilisearch-sdk = { git="https://github.com/Mubelotix/meilisearch-sdk", rev="3722583" }
tokio = { version = "0.2", features = ["full"] }